--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
- <head>
-  <meta content="text/html;charset=UTF-8" http-equiv="content-type" />
-  <meta content="width=device-width" name="viewport" />
+<html lang="en">
+  <meta charset=UTF-8>
+  <meta content="width=device-width" name="viewport">
   <title>Continuous Standards Development</title>
   <link rel="stylesheet" title="TPAC 2019"
-   href="template/TPAC-2019-slides.css" />
-  <!-- Use one of the following two script lines: -->
+   href="template/TPAC-2019-slides.css">
   <script src="template/shower.min.js" type="text/javascript"></script>
-  <!--<script src="template/b6plus.js" type="text/javascript"></script>-->
   <style>
     ul.nostyle > li::before {
       content: "";
@@ -30,7 +26,7 @@
     <div class='slide'>
     <h1>Background</h1>
     <img src="https://www.w3.org/2018/10/Meetup/image/Lyon_Rhone_bkg.jpg"
-      alt="A bridge over the Rhone in Lyon" class="cover" />
+      alt="A bridge over the Rhone in Lyon" class="cover">
     </div>
     <div class='slide'>
     <h1>Where can the REC track be improved?</h1>
@@ -388,10 +384,3 @@
   </ul>
     </div>
     </div>
-
-  <div class="comment">
-   <address>From <a href='https://docs.google.com/presentation/d/1jKiPIrbIH6RdJE15nYWA-xr1DDVuYAeurpfhu6Dug-c/edit'>G-slides</a> Last modified
-   $Date: 2019/09/23 13:32:15 $ by $Author: plehegar $.</address>
-  </div>
- </body>
-</html>
