Answer previously open question

--- a/index.html
+++ b/index.html
@@ -262,10 +262,7 @@ ul.nostyle > li::before {
 				<li>Formal patent / AC reviews rate-limited to approximately once per six months
 			</ul>
 			<li>Group Participants are making ongoing contribution commitments
-			<li>Full specification commitments earlier than REC
-				<ul>
-					<li>Open Question: At CR or at WD?
-				</ul>
+			<li>Full specification commitments earlier than REC, at CR
 	</ol>
 </div>
 
