--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ ul.nostyle > li::before {
 
 <div class="slide cover clear" id='start'>
 	<h1>Continuous Standards Development</h1>
-	<address>Elika J Etemad<br>&amp;Philippe Le H&eacute;garet</address>
+	<address>Elika J Etemad<br>&amp;Florian Rivoal</address>
 </div>
 
 <div class='slide'>
