--- a/index.html
+++ b/index.html
@@ -129,12 +129,10 @@ ul.nostyle > li::before {
 		<p><strong>Currently:</strong> We secure promises to license at each exclusion opportunity, but only licenses at REC.
 		<p style='margin-bottom: 0'><strong>Proposal:</strong> Secure licensing, rather than just commitments to license:
 		<ul style='margin-top: 0'>
-			<li>on each <strong>contribution</strong>, by the contributor, at the time of contribution
-			<li>on <strong>full specification</strong>, by all WG participants, at the end of each exclusion period
+			<li>on <strong>full specification</strong>, by all WG participants, at the end of each exclusion period from CR onwards
+			<li><del>on each <strong>contribution</strong>, by the contributor, at the time of contribution</del>
 		</ul>
-		<p><strong>Key Questions:</strong>
-		Can we change patent policy? Do we need to experiment? <a href='https://www.w3.org/2002/09/wbs/33280/improved-pp-2019/'>Answer AC survey on Patent Policy!</a><br>
-		How early should we apply full-specification licenses? CRs only, or WD updates well? Do we need contribution licensing, or only full-spec licensing?
+		<p>See <a href=''>separate presentation on the Patent Policy (link TBD)</a>
 	</div>
 </div>
 
