Remove details on Registries

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ ul.nostyle > li::before {
 				<li>Inline Errata + Review of Proposed Changes process
 				<li>Allow adding features to Extensible Recommendations
 			</ol>
-		<li><strong>Dedicated Registry Process</strong>
+		<li><del>Dedicated Registry Process</del>
 	</ol>
 </div>
 
@@ -201,23 +201,6 @@ ul.nostyle > li::before {
 </div>
 
 <div class='slide'>
-	<h1>Additional Fix: Registry Process</h1>
-	<div class="note">
-		<p><strong>Problem:</strong> Registries need lightweight update process, possible maintenance outside a WG.
-		<p><strong>Currently:</strong> W3C only has NOTEs, which have no normative status, and RECs, which are hard to update.
-		<p style='margin-bottom: 0'><strong>Proposal:</strong> New type of technical report for W3C Registries:
-		<ul style='margin-top: 0; font-size: small'>
-			<li>Defines <strong>registry definition</strong>: type/scope/format of entries, process to add/modify/delete.
-			<li><strong>Registry publication</strong>: incorporated as HTML tables or CSV in /TR publication
-			<li>Dated URL provides dated contents; undated URL provides latest contents. (Just like any table in a spec today.)
-			<li>No IPR commitments on <strong>registry publications</strong>.
-			<li>Updates to <strong>registry publication</strong> that conform to <strong>registry definition</strong> can be published instantly.
-	</ul>
-	<p>See <a href='https://www.w3.org/2019/Talks/TPAC/ac-registries/'>separate AC presentation</a>
-	</div>
-</div>
-
-<div class='slide'>
 	<h1>Process Improvements Package Summary</h1>
 	<ol>
 		<li><strong>Updating the Patent Policy</strong>
@@ -231,7 +214,6 @@ ul.nostyle > li::before {
 				<li>Inline Errata + Review of Proposed Changes process
 				<li>Allow adding features to Extensible Recommendations
 			</ol>
-		<li><strong>Dedicated Registry Process</strong>
 	</ol>
 </div>
 
