Remove stray mentions of contribution commitments

--- a/index.html
+++ b/index.html
@@ -226,11 +226,8 @@ ul.nostyle > li::before {
 	<ol>
 		<li>Allow easier maintenance paths for its Recommendations (changes and additions)
 		<li>Allow keeping CR publications in sync with latest edits, without waiting on Director approval
-		<li>Secure Patent Commitments earlier than REC
-			<ol type='a'>
-				<li>Contribution commitments on ongoing basis
-				<li>Full specification commitments at the end of each exclusion period
-			</ol>
+		<li>Secure Patent Commitments earlier than REC:<br>
+		    Full specification commitments at the end of each exclusion period, starting at CR
 	</ol>
 </div>
 
@@ -241,7 +238,6 @@ ul.nostyle > li::before {
 			<ul>
 				<li>Formal patent / AC reviews rate-limited to approximately once per six months
 			</ul>
-			<li>Group Participants are making ongoing contribution commitments
 			<li>Full specification commitments earlier than REC, at CR
 	</ol>
 </div>
