"CR Updates" are now known as "CR Drafts"

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ ul.nostyle > li::before {
 		<p style='margin-bottom: 0'><strong>Proposal:</strong> Decouple update publications from review publications:
 		<ul style='margin-top: 0'>
 			<li><strong>CR Snapshot publication</strong> requires wide review, Director's approval, trigger patent review
-			<li><strong>CR Update Pubication</strong> can be published by the WG without approval, no patent review
+			<li><strong>CR Draft Pubication</strong> can be published by the WG without approval, no patent review
 				<ul style='margin-top: 0; font-size: small'>
 					<li>Changes since last Patent Review Draft must be tracked to facilitate review
 					<li>Spec header adds links to previous Patent Review publication as well as previous [generic] publication.
