--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset=UTF-8>
 <meta content="width=device-width" name="viewport">
 <title>Continuous Standards Development</title>
-<link rel="stylesheet" title="TPAC 2019" href="template/TPAC-2019-slides.css">
+<link rel="stylesheet" href="template/AC-2020-slides.css">
 <script src="template/shower.min.js" type="text/javascript"></script>
 <style>
 ul.nostyle > li::before {
