"Extensible REC" moniker was dropped. Adjust accordinly

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ ul.nostyle > li::before {
 		<li><strong>Streamlining Recommendation updates</strong>
 			<ol type='a'>
 				<li>Inline Errata + Review of Proposed Changes process
-				<li>Allow adding features to Extensible Recommendations
+				<li>Allow adding features to designated Recommendations
 			</ol>
 		<li><del>Dedicated Registry Process</del>
 	</ol>
@@ -187,16 +187,15 @@ ul.nostyle > li::before {
 </div>
 
 <div class='slide'>
-	<h1>Proposed Fix: Allow Adding Features to an Extensible REC</h1>
+	<h1>Proposed Fix: Allow Adding Features to a REC</h1>
 	<div class="note">
 		<ul>
 			<li>Some communities need a specification to represent a stable feature set.
 			<li><strong>Problem:</strong> Some communities need a specification to represent continuous development.
 		</ul>
 		<p><strong>Currently:</strong> REC specifications cannot accept new features; a new level of the technology must be specified starting with a new FPWD.
-		<p><strong>Proposal:</strong> Re-use REC maintenance process for incorporating <strong>proposed changes</strong> (above) to also allow incorporating <strong>proposed additions</strong> into specifications chartered to be extensible.
-		<p class='note'><strong>Note:</strong> Current proposal requires distinguishing extensible RECs from feature-stable RECs.
-		<p><strong>Key Question:</strong> Do we want to allow a W3C Recommendation to evolve with new features?
+		<p><strong>Proposal:</strong> Re-use REC maintenance process for incorporating <strong>proposed changes</strong> (above) to also allow incorporating <strong>proposed additions</strong>.
+		<p class='note'><strong>Note:</strong> Only allowed if stated in the specification prior to publishing as REC.
 	</div>
 </div>
 
@@ -212,7 +211,7 @@ ul.nostyle > li::before {
 		<li><strong>Streamlining Recommendation updates</strong>
 			<ol type='a'>
 				<li>Inline Errata + Review of Proposed Changes process
-				<li>Allow adding features to Extensible Recommendations
+				<li>Allow adding features to designated Recommendations
 			</ol>
 	</ol>
 </div>
