Fix more references to CR updates into CR drafts

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ ul.nostyle > li::before {
 		<li><strong>Streamlining Candidate Recommendation updates</strong>
 			<ol type='a'>
 				<li>Automating routine Director’s approvals
-				<li>Decoupling CR update publications from patent review drafts
+				<li>Decoupling CR Draft publications from Patent Review Drafts
 			</ol>
 		<li><strong>Streamlining Recommendation updates</strong>
 			<ol type='a'>
@@ -150,12 +150,12 @@ ul.nostyle > li::before {
 </div>
 
 <div class='slide'>
-	<h1>Proposed Fix: Decoupling CR updates from CR snapshots</h1>
+	<h1>Proposed Fix: Decoupling CR Drafts from CR Snapshots</h1>
 	<div class="note">
 		<p><strong>Currently:</strong> Updating a CR requires external verification of work and triggers a patent exclusion period. Accommodating these reviews slows updates. (Even if we speed up Director’s approvals, legal teams want infrequent patent reviews.)
 		<p><strong>Problem:</strong> CR publications lag, often significantly, behind WG’s current-work, reducing value and authoritativeness of W3C’s official publications.
 		<p><strong>Goal:</strong> Address use case of Living Standards: always up-to-date, periodic patent commitment</p>
-		<p style='margin-bottom: 0'><strong>Proposal:</strong> Decouple update publications from review publications:
+		<p style='margin-bottom: 0'><strong>Proposal:</strong> Decouple draft publications from review publications:
 		<ul style='margin-top: 0'>
 			<li><strong>CR Snapshot publication</strong> requires wide review, Director's approval, trigger patent review
 			<li><strong>CR Draft Pubication</strong> can be published by the WG without approval, no patent review
@@ -206,7 +206,7 @@ ul.nostyle > li::before {
 		<li><strong>Streamlining Candidate Recommendation updates</strong>
 			<ol type='a'>
 				<li>Automating routine Director’s approvals
-				<li>Decoupling CR update publications from patent review drafts
+				<li>Decoupling CR Draft publications from Patent Review Drafts
 			</ol>
 		<li><strong>Streamlining Recommendation updates</strong>
 			<ol type='a'>
