Rewrite introductory material

--- a/index.html
+++ b/index.html
@@ -19,62 +19,45 @@ ul.nostyle > li::before {
 </div>
 
 <div class="slide cover clear" id='start'>
-	<h1>Continuous Standards Development</h1>
-	<address>Elika J Etemad<br>&amp;Florian Rivoal</address>
+	<h1>Process 2020</h1>
+	<address>Florian Rivoal (frivoal)<br>&amp;Elika J. Etemad (fantasai)</address>
 </div>
 
 <div class='slide'>
 	<h1>Background</h1>
-	<img src="https://www.w3.org/2018/10/Meetup/image/Lyon_Rhone_bkg.jpg"
-	     alt="A bridge over the Rhone in Lyon" class="cover">
 </div>
 
 <div class='slide'>
-	<h1>Where can the REC track be improved?</h1>
-	<div class="note">
-		<ol>
-			<li><strong>Maintaining and evolving</strong> a Specification is difficult:
-				<ol type='a'>
-					<li>Continuous development means tracking reality is a never-ending task. Declaring a spec as a REC by pulling out not-yet-normative features is burdensome.
-					<li>Bug fixes can appear at all times and may need to be addressed urgently (security fixes).
-					<li>Multiple transition requests and TR publications take extra time/resources.
-				</ol>
-			<li><strong>Patent Commitments</strong> are only secured at REC status, after implementation.
-			<li><strong>Registries</strong> aren’t well handled and are all over the place (RECs, NOTEs, wikis, web pages).
-		</ol>
-		<p>WHATWG’s Living Standards and the W3C / WHATWG collaboration agreement give insight on how to do continuous standard development while fulfilling requirements of the W3C REC track.
-    </div>
+	<h1>Motivation: Problems</h1>
+		<ul>
+			<li><strong>Developing and evolving</strong> a Specification is currently difficult:
+				<ul>
+					<li>Complex specs spend years in CR without patent protection as details are refined prior to REC.
+					<li>Continuous development means tracking reality is a never-ending task. Declaring part of a spec as a REC by pulling out not-yet-normative features is obnoxious busywork to engineers who work on a continuous basis.
+				</ul>
+			<li><strong>Maintaining</strong> a Specification is currently difficult:
+				<ul>
+					<li>Bug fixes can appear at all times, and some may need to be addressed urgently (security fixes).
+					<li>Multiple transition requests and TR publications take extra time/resources, demotivating maintenance of RECs.
+				</ul>
+		</ul>
+</div>
+
+<div class="slide">
+	<h1>Motivation: Symptoms</h1>
+		<ul>
+			<li><strong>Out-of-date specifications</strong> hinder interoperability and understanding, yet many W3C specifications are either unmaintained, or maintained in unofficial publications, because posting official updates through the current Process is too burdensome.
+			<li>Work is shifting <strong>out of W3C Working Groups</strong> to Community Groups and WHATWG because of these maintenance problems.
+		</ul>
 </div>
 
 <div class='slide'>
-	<h1>Use Cases</h1>
-	<ul type='none' class='nostyle' style='padding-left: 0'>
-		<li><strong>Vocabularies, Mappings:</strong> Most have little IPR, and grow in a natural incremental fashion.
-		<li><strong>Registries, Profiles:</strong> Mostly no IPR commitments, incremental updates
-		<li><strong>Maintenance:</strong> Bug-fixing of stable specifications with minimal overhead
-		<li><strong>Continuous Enhancement:</strong> Incremental development one feature at a time
-		<li><strong>Rapid Development:</strong> Security improvements
-		<li><strong>Tracking:</strong> Coordinating update with other living standards, e.g. Fetch integration
+	<h1>Constraints: W3C Values</h1>
+	<ul>
+		<li>W3C values <strong>wide review</strong>, <strong>implementation experience</strong>, <strong>consensus</strong>, and <strong>royalty-free licensing</strong> as a means of developing well thought-out, implementable, and relevant specifications.
+		<li>Key <strong>role of the Process</strong> is to ensure these values are deeply incorporated into W3C’s standardization process.
+		<li>W3C Process needs to be a supportive framework that solicits excellence from both <strong>veteran standards experts</strong> as well as <strong>new participants and communities</strong> in a wide variety of industries; therefore needs both flexibility and formal structure.
 	</ul>
-</div>
-
-<div class='slide'>
-	<h1>Motivating Examples</h1>
-	<p><a href='https://github.com/w3c/w3process/issues/79'>Issue #79</a> raised the following specs:
-	<ol style='font-size: small'>
-		<li>ARIA: ARIA Mappings
-		<li>SVG: Beyond SVG 2
-		<li>WebAppSec: CSP
-		<li>Web Performance: performance timeline, …
-		<li>Web Platform: WebIDL
-		<li>Dataset Exchange: Beyond DCat 1.1
-		<li>Timed Text: TTML Profile registry
-		<li>Distributed Tracing: Trace Context Protocol Registry
-		<li>WebRTC: registries
-		<li>WebApps: Manifest, etc.
-		<li>Service Workers: Beyond SW 1
-		<li>CSS: 100 specifications and counting...
-	</ol>
 </div>
 
 <div class='slide'>
@@ -89,14 +72,32 @@ ul.nostyle > li::before {
 </div>
 
 <div class='slide'>
-	<h1>Design Intentions</h1>
-	<p>The AB has <a href='https://lists.w3.org/Archives/Member/w3c-ac-members/2019JulSep/0027.html'>resolved</a> to address the continuous development on an accelerated basis and the W3C Process Community Group has explored several approaches.
+	<h1>Design Principles</h1>
 	<ul>
-		<li>Recommendation Track has problems, so let’s fix them!
-		<li>Incremental improvements as a set of ideas that could be adopted individually or together.
-		<li>Building on existing Process avoids undiscovered pitfalls of a brand new process track.
-		<li>Avoid confusing community with a different, parallel track.
+		<li>Contents of a REC must fulfill the <strong>same requirements</strong> as currently.
+		<li>Maintain single Process track for normative specifications.
+		<li>Enable WGs to consistently maintain <strong>intended implementation target as official publications</strong> on w3.org/TR
+		<li>Wide review invites participation of the broader community, not just experts.
+		<li>Patent protection for early implementations and on continuously-developed specs.
+		<li>Improve on existing Process, don't rewrite from scratch.
 	</ul>
+</div>
+
+<div class='slide'>
+	<h1>Motivating Examples</h1>
+	<ol style='font-size: small'>
+		<li>ARIA: ARIA Mappings
+		<li>SVG: Beyond SVG 2
+		<li>WebAppSec: CSP
+		<li>Web Performance: performance timeline, …
+		<li>Web Platform: WebIDL
+		<li>Dataset Exchange: Beyond DCat 1.1
+		<li>Timed Text: TTML Profile registry
+		<li>Distributed Tracing: Trace Context Protocol Registry
+		<li>WebApps: Manifest, etc.
+		<li>Service Workers: Beyond SW 1
+		<li>CSS: 100 specifications and counting...
+	</ol>
 </div>
 
 <div class='slide'>
@@ -117,7 +118,7 @@ ul.nostyle > li::before {
 				<li>Inline Errata + Review of Proposed Changes process
 				<li>Allow adding features to designated Recommendations
 			</ol>
-		<li><del>Dedicated Registry Process</del>
+		<li><del>Dedicated Registry Process</del> <i>Rescheduled for 2021!</i>
 	</ol>
 </div>
 
