Tweaks to proposal descriptions

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@ ul.nostyle > li::before {
 		<li><strong>Updating the Patent Policy</strong>
 		<li><strong>Streamlining Candidate Recommendation updates</strong>
 			<ol type='a'>
-				<li>Automating routine Director’s approvals
-				<li>Decoupling CR Draft publications from Patent Review Drafts
+				<li>Allow easy CR "Drafts" between rigorous CR snapshots
+				<li>Automate routine Director’s approvals
 			</ol>
 		<li><strong>Streamlining Recommendation updates</strong>
 			<ol type='a'>
-				<li>Inline Errata + Review of Proposed Changes process
+				<li>Add amendment process for bug fixes
 				<li>Allow adding features to designated Recommendations
 			</ol>
 		<li><del>Dedicated Registry Process</del> <i>Rescheduled for 2021!</i>
@@ -151,17 +151,17 @@ ul.nostyle > li::before {
 </div>
 
 <div class='slide'>
-	<h1>Proposed Fix: Decoupling CR Drafts from CR Snapshots</h1>
+	<h1>Proposed Fix: Allow CR Drafts between CR Snapshots</h1>
 	<div class="note">
 		<p><strong>Currently:</strong> Updating a CR requires external verification of work and triggers a patent exclusion period. Accommodating these reviews slows updates. (Even if we speed up Director’s approvals, legal teams want infrequent patent reviews.)
-		<p><strong>Problem:</strong> CR publications lag, often significantly, behind WG’s current-work, reducing value and authoritativeness of W3C’s official publications.
+		<p><strong>Problem:</strong> CR publications lag, often significantly, behind WG’s current-work, reducing value and authority of W3C’s official publications.
 		<p><strong>Goal:</strong> Address use case of Living Standards: always up-to-date, periodic patent commitment</p>
-		<p style='margin-bottom: 0'><strong>Proposal:</strong> Decouple draft publications from review publications:
+		<p style='margin-bottom: 0'><strong>Proposal:</strong> Allow CR draft publications between CR review snapshot publications:
 		<ul style='margin-top: 0'>
-			<li><strong>CR Snapshot publication</strong> requires wide review, Director's approval, trigger patent review
+			<li><strong>CR Snapshot publication</strong> requires wide review, Director's approval, triggers patent review
 			<li><strong>CR Draft pubication</strong> can be published by the WG without approval, no patent review
 				<ul style='margin-top: 0; font-size: small'>
-					<li>Changes since last Patent Review Draft must be tracked to facilitate review
+					<li>Significant changes since last snapshot must be tracked to facilitate review
 					<li>Spec header adds links to previous Patent Review publication as well as previous [generic] publication.
 				</ul>
 		</ul>
@@ -177,11 +177,11 @@ ul.nostyle > li::before {
 			<li>Excessive process &amp; publication work for WGs and Staff.
 			<li>Results in poorly-maintained RECs.
 		</ul>
-		<p><strong>Goal:</strong> Make it easy to propose, review, and incorporate changes without destabilizing the REC.
+		<p><strong>Goal:</strong> Make it easy to propose, review, and incorporate individual changes without destabilizing the entire REC.
 		<p style='margin-bottom: 0'><strong>Proposal:</strong> Create an errata proposal + approval process:
 		<ul style='margin-top: 0'>
 			<li><strong>Inline Errata -</strong> Allow WGs to republish annotated RECs, noting <strong>proposed changes</strong>.
-			<li><strong>Review of Proposed Changes -</strong> Combine transition-like checks for wide review, adequate implementation, plus AC and patent reviews on proposed REC with changes.
+			<li><strong>Review of Proposed Changes -</strong> Combine transition-like checks for wide review, adequate implementation, plus AC and patent reviews on proposed REC with selected changes.
 			<li><strong>Updated REC -</strong> Reviewed changes can then be folded directly into an updated REC.
 		</ul>
 	</div>
@@ -196,7 +196,7 @@ ul.nostyle > li::before {
 		</ul>
 		<p><strong>Currently:</strong> REC specifications cannot accept new features; a new level of the technology must be specified starting with a new FPWD.
 		<p><strong>Proposal:</strong> Re-use REC maintenance process for incorporating <strong>proposed changes</strong> (above) to also allow incorporating <strong>proposed additions</strong>.
-		<p class='note'><strong>Note:</strong> Only allowed if stated in the specification prior to publishing as REC.
+		<p class='note'><strong>Note:</strong> Only allowed if stated in the specification prior to first publication as REC.
 	</div>
 </div>
 
@@ -206,12 +206,12 @@ ul.nostyle > li::before {
 		<li><strong>Updating the Patent Policy</strong>
 		<li><strong>Streamlining Candidate Recommendation updates</strong>
 			<ol type='a'>
-				<li>Automating routine Director’s approvals
-				<li>Decoupling CR Draft publications from Patent Review Drafts
+				<li>Allow easy CR "Drafts" between rigorous CR snapshots
+				<li>Automate routine Director’s approvals
 			</ol>
 		<li><strong>Streamlining Recommendation updates</strong>
 			<ol type='a'>
-				<li>Inline Errata + Review of Proposed Changes process
+				<li>Add amendment process for bug fixes
 				<li>Allow adding features to designated Recommendations
 			</ol>
 	</ol>
