--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ ul.nostyle > li::before {
 		<p style='margin-bottom: 0'><strong>Proposal:</strong> Secure licensing, rather than just commitments to license:
 		<ul style='margin-top: 0'>
 			<li>on <strong>full specification</strong>, by all WG participants, at the end of each exclusion period from CR onwards
-			<li><del>on each <strong>contribution</strong>, by the contributor, at the time of contribution</del>
+			<li><del>on each <strong>contribution</strong>, by the contributor, at the time of contribution</del> <i>judged both unnecessary and too complicated by PSIG</i>
 		</ul>
 		<p>See <a href=''>separate presentation on the Patent Policy (link TBD)</a>
 	</div>
@@ -139,8 +139,8 @@ ul.nostyle > li::before {
 
 <div class='slide'>
 	<h1>Proposed Fix: Streamlining Routine CR Republication Approvals</h1>
-	<p><strong>Problem:</strong> Republishing WDs is automatic given WG approval, but republishing CR requires Director’s Approval. Most republication requests, however, are routine and don’t need much scrutiny.
-	<p style='margin-bottom: 0'><strong>Proposal:</strong> Allow automatic Director’s Approval for straightforward cases, e.g.
+	<p><strong>Problem:</strong> Republishing WDs is automatic given WG approval, but republishing CR requires Director’s approval. Most republication requests, however, are routine and don’t need much scrutiny.
+	<p style='margin-bottom: 0'><strong>Proposal:</strong> Allow automatic Director’s approval for straightforward cases, e.g.
 	<ul style='margin-top: 0'>
 		<li>Documented WG decision to publish
 		<li>All changes documented
@@ -156,10 +156,10 @@ ul.nostyle > li::before {
 		<p><strong>Currently:</strong> Updating a CR requires external verification of work and triggers a patent exclusion period. Accommodating these reviews slows updates. (Even if we speed up Director’s approvals, legal teams want infrequent patent reviews.)
 		<p><strong>Problem:</strong> CR publications lag, often significantly, behind WG’s current-work, reducing value and authority of W3C’s official publications.
 		<p><strong>Goal:</strong> Address use case of Living Standards: always up-to-date, periodic patent commitment</p>
-		<p style='margin-bottom: 0'><strong>Proposal:</strong> Allow CR draft publications between CR review snapshot publications:
+		<p style='margin-bottom: 0'><strong>Proposal:</strong> Allow CR draft publications between CR snapshot publications:
 		<ul style='margin-top: 0'>
 			<li><strong>CR Snapshot publication</strong> requires wide review, Director's approval, triggers patent review
-			<li><strong>CR Draft pubication</strong> can be published by the WG without approval, no patent review
+			<li><strong>CR Draft publication</strong> can be published by the WG without approval, no patent review
 				<ul style='margin-top: 0; font-size: small'>
 					<li>Significant changes since last snapshot must be tracked to facilitate review
 					<li>Spec header adds links to previous Patent Review publication as well as previous [generic] publication.
