--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ ul.nostyle > li::before {
 </div>
 
 <div class="slide">
-	<h1>Motivation: Symptoms</h1>
+	<h1>Motivation: Evidence</h1>
 		<ul>
 			<li><strong>Out-of-date specifications</strong> hinder interoperability and understanding, yet many W3C specifications are either unmaintained, or maintained in unofficial publications, because posting official updates through the current Process is too burdensome.
 			<li>Work is shifting <strong>out of W3C Working Groups</strong> to Community Groups and WHATWG because of these maintenance problems.
@@ -56,7 +56,7 @@ ul.nostyle > li::before {
 	<ul>
 		<li>W3C values <strong>wide review</strong>, <strong>implementation experience</strong>, <strong>consensus</strong>, and <strong>royalty-free licensing</strong> as a means of developing well thought-out, implementable, and relevant specifications.
 		<li>Key <strong>role of the Process</strong> is to ensure these values are deeply incorporated into W3C’s standardization process.
-		<li>W3C Process needs to be a supportive framework that solicits excellence from both <strong>veteran standards experts</strong> as well as <strong>new participants and communities</strong> in a wide variety of industries; therefore needs both flexibility and formal structure.
+		<li>W3C Process needs to be a supportive framework that solicits excellence from both <strong>experienced standards experts</strong> as well as <strong>new participants and communities</strong> in a wide variety of industries; therefore needs both flexibility and formal structure.
 	</ul>
 </div>
 
@@ -76,7 +76,7 @@ ul.nostyle > li::before {
 	<ul>
 		<li>Contents of a <abbr title="Recommendation">REC</abbr> must fulfill the <strong>same requirements</strong> as currently.
 		<li>Maintain single Process track for normative specifications.
-		<li>Enable <abbr title="Working Group">WG</abbr>s to consistently maintain <strong>intended implementation target as official publications</strong> on w3.org/TR
+		<li>Enable <abbr title="Working Group">WG</abbr>s to consistently maintain <strong>intended implementation target as the official publication</strong> on w3.org/TR
 		<li>Wide review invites participation of the broader community, not just experts.
 		<li>Patent protection for early implementations and on continuously-developed specs.
 		<li>Improve on existing Process, don't rewrite from scratch.
@@ -107,7 +107,6 @@ ul.nostyle > li::before {
 <div class='slide'>
 	<h1>Process Improvements Package</h1>
 	<ol>
-		<li><strong>Updating the Patent Policy</strong>
 		<li><strong>Streamlining Candidate Recommendation updates</strong>
 			<ol type='a'>
 				<li>Allow easy <abbr title="Candidate Recommendation">CR</abbr> "Drafts" between rigorous <abbr title="Candidate Recommendation">CR</abbr> snapshots
@@ -119,27 +118,13 @@ ul.nostyle > li::before {
 				<li>Allow adding features to designated Recommendations
 			</ol>
 		<li><del>Dedicated Registry Process</del> <i>Rescheduled for 2021!</i>
+		<li><strong>Updating the Patent Policy</strong>
 	</ol>
 </div>
 
 <div class='slide'>
-	<h1>Proposed Fix: Patent Policy Improvements</h1>
-	<div class="note">
-		<p><strong>Problem:</strong> Patents licenses are only granted after <abbr title="Recommendation">REC</abbr>, but implementations needed before <abbr title="Recommendation">REC</abbr>.
-		<br><strong>Goal:</strong> Secure patent commitments earlier, without depending on meeting <abbr title="Recommendation">REC</abbr> requirements.
-		<p><strong>Currently:</strong> We secure promises to license at each exclusion opportunity, but only licenses at <abbr title="Recommendation">REC</abbr>.
-		<p style='margin-bottom: 0'><strong>Proposal:</strong> Secure licensing, rather than just commitments to license:
-		<ul style='margin-top: 0'>
-			<li>on <strong>full specification</strong>, by all <abbr title="Working Group">WG</abbr> participants, at the end of each exclusion period from <abbr title="Candidate Recommendation">CR</abbr> onwards
-			<li><del>on each <strong>contribution</strong>, by the contributor, at the time of contribution</del> <i>judged both unnecessary and too complicated by <abbr title="the Patents and Standards Interest Group">PSIG</abbr></i>
-		</ul>
-		<p>See <a href=''>separate presentation on the Patent Policy (link TBD)</a>
-	</div>
-</div>
-
-<div class='slide'>
-	<h1>Proposed Fix: Streamlining Routine <abbr title="Candidate Recommendation">CR</abbr> Republication Approvals</h1>
-	<p><strong>Problem:</strong> Republishing <abbr title="Working Draft">WD</abbr>s is automatic given <abbr title="Working Group">WG</abbr> approval, but republishing <abbr title="Candidate Recommendation">CR</abbr> requires Director’s approval. Most republication requests, however, are routine and don’t need much scrutiny.
+	<h1>Proposed Fix: Streamlining Routine CR Republication Approvals</h1>
+	<p><strong>Problem:</strong> Republishing WDs is automatic given WG approval, but republishing CR requires Director’s approval. Most republication requests, however, are routine and don’t need much scrutiny.
 	<p style='margin-bottom: 0'><strong>Proposal:</strong> Allow automatic Director’s approval for straightforward cases, e.g.
 	<ul style='margin-top: 0'>
 		<li>Documented <abbr title="Working Group">WG</abbr> decision to publish
@@ -201,9 +186,23 @@ ul.nostyle > li::before {
 </div>
 
 <div class='slide'>
+	<h1>Proposed Fix: Patent Policy Improvements</h1>
+	<div class="note">
+		<p><strong>Problem:</strong> Patents licenses are only granted after REC, but implementations needed before REC.
+		<br><strong>Goal:</strong> Secure patent commitments earlier, without depending on meeting REC requirements.
+		<p><strong>Currently:</strong> We secure promises to license at each exclusion opportunity, but only licenses at REC.
+		<p style='margin-bottom: 0'><strong>Proposal:</strong> Secure licensing, rather than just commitments to license:
+		<ul style='margin-top: 0'>
+			<li>on <strong>full specification</strong>, by all WG participants, at the end of each exclusion period from CR onwards
+			<li><del>on each <strong>contribution</strong>, by the contributor, at the time of contribution</del> <i>not addressed in current PSIG update</i>
+		</ul>
+		<p>See <a href=''>separate presentation on the Patent Policy (link TBD)</a>
+	</div>
+</div>
+
+<div class='slide'>
 	<h1>Process Improvements Package Summary</h1>
 	<ol>
-		<li><strong>Updating the Patent Policy</strong>
 		<li><strong>Streamlining Candidate Recommendation updates</strong>
 			<ol type='a'>
 				<li>Allow easy <abbr title="Candidate Recommendation">CR</abbr> "Drafts" between rigorous <abbr title="Candidate Recommendation">CR</abbr> snapshots
@@ -214,6 +213,7 @@ ul.nostyle > li::before {
 				<li>Add amendment process for bug fixes
 				<li>Allow adding features to designated Recommendations
 			</ol>
+		<li><strong>Updating the Patent Policy</strong>
 	</ol>
 </div>
 
@@ -232,7 +232,7 @@ ul.nostyle > li::before {
 </div>
 
 <div class='slide'>
-	<h1>Impact on Legal Teams & Advisory Committee</h1>
+	<h1>Impact on Advisory Committee & Legal Teams</h1>
 	<ol>
 		<li>AC/Patent reviews would be more frequent but with finer granularity
 			<ul>
@@ -265,5 +265,22 @@ ul.nostyle > li::before {
 		<li>Official specifications (on <a href='https://www.w3.org/TR/'>w3.org</a>) reflect latest <abbr title="Working Group">WG</abbr> thinking.
 		<li>Improved maintenance brings W3C Recommendations closer to reality.
 		<li>Granular reviews of proposed changes to Recommendations.
+	</ol>
+</div>
+
+<div class='slide'>
+	<h1>Timeline</h1>
+	<dl>
+		<dt>Informal AC Review: April/May
+		<dd><ul>
+			<li>Review, study, discuss, and ask questions.
+				<ul>
+					<li>Editors (<a href="mailto:florian@rivoal.net">Florian</a> and <a href="mailto:fantasai@inkedblade.net">fantasai</a>a>) are available to discuss by email/IRC/voice call anytime.
+				</ul>
+			<li>Critique and send comments to <a href="https://github.com/w3c/w3process/issues">W3C Process CG</a>.
+		</ul>
+		<dt>W3C Process CG prepares revised draft: June
+		<dt>Formal AC Ballot: June/July
+		<dd><em>The sooner you send your comments, the earlier we can address them and move to a formal ballot for adoption.</em>
 	</ol>
 </div>
