--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ ul.nostyle > li::before {
 		<li>Early implementations get W3C <abbr title="Royalty-Free">RF</abbr> commitments
 		<li>Official specifications (on <a href='https://www.w3.org/TR/'>w3.org</a>) reflect latest <abbr title="Working Group">WG</abbr> thinking.
 		<li>Improved maintenance brings W3C Recommendations closer to reality.
-		<li>Granular reviews of proposed changes to Recommendations.
+		<li>Proposed changes to Recommendations get granular reviews.
 	</ol>
 </div>
 
