--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ ul.nostyle > li::before {
 		<dd><ul>
 			<li>Review, study, discuss, and ask questions.
 				<ul>
-					<li>Editors (<a href="mailto:florian@rivoal.net">Florian</a> and <a href="mailto:fantasai@inkedblade.net">fantasai</a>a>) are available to discuss by email/IRC/voice call anytime.
+					<li>Editors (<a href="mailto:florian@rivoal.net">Florian</a> and <a href="mailto:fantasai@inkedblade.net">fantasai</a>) are available to discuss by email/IRC/voice call anytime.
 				</ul>
 			<li>Critique and send comments to <a href="https://github.com/w3c/w3process/issues">W3C Process CG</a>.
 		</ul>
