--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@ ul.nostyle > li::before {
 				</ul>
 			<li><strong>Maintaining</strong> a Specification is currently difficult:
 				<ul>
-					<li>Bug fixes can appear at all times, and some may need to be addressed urgently (security fixes).
+					<li>Bug fixes can appear at all times, and may need to be addressed urgently.
 					<li>Multiple transition requests and <abbr title="Technical Report">TR</abbr> publications take extra time/resources, demotivating maintenance of <abbr title="Recommendation">REC</abbr>s.
+					<li>Switching status of RECs to accept changes also misrepresents spec maturity.
 				</ul>
 		</ul>
 </div>
@@ -280,7 +281,7 @@ ul.nostyle > li::before {
 			<li>Critique and send comments to <a href="https://github.com/w3c/w3process/issues">W3C Process CG</a>.
 		</ul>
 		<dt>W3C Process CG prepares revised draft: June
-		<dt>Formal AC Ballot: June/July
+		<dt>Formal AC Ballot: June/July?
 		<dd><em>The sooner you send your comments, the earlier we can address them and move to a formal ballot for adoption.</em>
 	</ol>
 </div>
