Make "todo" invisible

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ ul.nostyle > li::before {
 			<li>on <strong>full specification</strong>, by all WG participants, at the end of each exclusion period from CR onwards
 			<li><del>on each <strong>contribution</strong>, by the contributor, at the time of contribution</del> <i>not addressed in current PSIG update</i>
 		</ul>
-		<p>See <a href=''>separate presentation on the Patent Policy (link TBD)</a>
+		<p>See <a href=''>separate presentation on the Patent Policy</a><!-- Link to be Updated when the URL of the presentation is known. -->
 	</div>
 </div>
 
